Refatoração feita, forkjoin e callable future